--- a/main page.html
+++ b/main page.html
@@ -9,18 +9,19 @@
     rgb(226, 223, 255),
     rgb(181, 173, 255)
   ) fixed;">
-    <di="main page.html">
-        <img v class="navbar">
-      <a hrefclass="logo" src="Samsung Edu Logo.png" alt="">
+    <div class="navbar">
+      <a href="main page.html">
+          <img class="logo" src="Samsung Edu Logo.png" alt="">
       </a>
-        <div class="navbar-div">
+      <div class="navbar-div">
           <nav>
-            <a href="explore.html">Explore</a> | <a href="StudyBuddies.html">Study Buddies</a> |
-            <a href="todolist.html">To-Do List</a> |
+              <a href="explore.html">Explore</a> | <a href="StudyBuddies.html">Study Buddies</a> |
+              <a href="todolist.html">To-Do List</a> |
+
 
           </nav>
-        </div>
-    </div>
+      </div>
+  </div>
     <div class="suggested-video-container">
         <p class="SuggestedBig">Science</p>
         <p class="SuggestedSmall">- Suggested</p>
