--- a/todolist.html
+++ b/todolist.html
@@ -205,7 +205,7 @@
 
     <span>
       <div class="yourdiv" id="yourDIV" class="header">
-        <h2 class="h2">Hey,</h2>
+        <h2 class="h2">Your Goals</h2>
         <input class="goal" type="text" id="goal" placeholder="Goals..." />
       </div>
     </span>
