--- a/main page.html
+++ b/main page.html
@@ -46,7 +46,7 @@
     </div>
     <div type="three" class="video-container">
       <p style="position: relative; top: -10px; left: 20px; color: rgb(0, 5, 80); font-size: 30px; text-decoration: underline;">Games</p>
-      <a target="_blank" href="https://zachydev.itch.io/flappy-bird-samsung-edu">Link to Game</a>
+      <a target="_blank"style="padding-left: 20px; color: white;"href="https://zachydev.itch.io/flappy-bird-samsung-edu">Link to Game</a>
     </div>
 
   </body>
